--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
 <AnchorPane id="SQLPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SQLPanelUIController">
    <children>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="380.0" prefWidth="613.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -18,8 +26,7 @@
                         </TextArea>
                         <VBox minWidth="120.0" spacing="10.0">
                            <children>
-                            <Button fx:id="sqlExecuteStatementButton" mnemonicParsing="false" onAction="#handleSqlExecuteStatement" text="Ausführen" />
-                              <Button fx:id="sqlExecuteScriptButton" mnemonicParsing="false" onAction="#handleSqlExecuteScript" prefHeight="26.0" prefWidth="199.0" text="Skript ausführen" />
+                            <Button fx:id="sqlExecuteStatementButton" mnemonicParsing="false" onAction="#executeQuery" text="Ausführen" />
                            </children>
                            <opaqueInsets>
                               <Insets />
@@ -36,7 +43,16 @@
             </AnchorPane>
           <AnchorPane>
                <children>
-                  <TableView fx:id="sqlResultTable" layoutX="14.0" layoutY="14.0" prefHeight="170.0" prefWidth="570.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                  <ScrollPane layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                     <content>
+                        <TableView fx:id="resultTable" prefWidth="600.0" />
+                     </content>
+                  </ScrollPane>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0">
+                    <buttons>
+                      <Button fx:id="exportButton" mnemonicParsing="false" text="Exportieren" />
+                    </buttons>
+                  </ButtonBar>
                </children>
             </AnchorPane>
         </items>
