--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportPanelUIController"
-            prefHeight="400.0" prefWidth="600.0"
-            id="ImportPanel">
 
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="ImportPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportPanelUIController">
+   <children>
+      <Button layoutX="34.0" layoutY="32.0" mnemonicParsing="false" text="Import New Log Data" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0" />
+   </children>
 </AnchorPane>
