global message panel and prototype for user dao

--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
 <AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
    <children>
       <VBox id="main_menu_pane" prefHeight="761.0" prefWidth="196.0">
@@ -38,6 +43,11 @@
             </ToggleButton>
          </children>
       </VBox>
-      <AnchorPane id="content_pane" fx:id="contentPane" layoutX="200.0" layoutY="50.0" minHeight="200.0" minWidth="200.0" prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+      <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" prefHeight="858.0" prefWidth="1002.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+         <items>
+            <TextArea id="messageBox" fx:id="messageBox" promptText="Meldungen" wrapText="true" />
+            <AnchorPane id="content_pane" fx:id="contentPane" minHeight="200.0" minWidth="200.0" prefHeight="600.0" prefWidth="800.0" />
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
