--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -17,17 +16,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane id="ReportPanel" prefHeight="529.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController">
+<AnchorPane id="ReportPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController">
    <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="745.6" prefWidth="602.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane id="scroll" fitToHeight="true" fitToWidth="true" prefHeight="734.4" prefWidth="624.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox prefWidth="600.0">
+            <VBox id="vbox">
                <children>
-                  <TitledPane text="Report definieren">
+                  <TitledPane id="tp1" text="Report definieren" VBox.vgrow="ALWAYS">
                      <content>
-                        <AnchorPane>
+                        <AnchorPane id="anchor_inside">
                            <children>
-                              <GridPane minHeight="200.0" prefHeight="139.0" prefWidth="578.0" AnchorPane.leftAnchor="0.0">
+                              <GridPane minHeight="200.0" prefHeight="139.0" prefWidth="578.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="10.0" prefWidth="120.0" />
@@ -66,12 +65,12 @@
                                     <CheckComboBox fx:id="site" prefHeight="26.0" prefWidth="186.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                  </children>
                               </GridPane>
-                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0">
                                  <children>
-                                    <GridPane prefHeight="36.0" prefWidth="580.0">
+                                    <GridPane prefHeight="36.0">
                                        <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.200048828125" minWidth="50.0" prefWidth="100.0" />
-                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="503.1999984741211" minWidth="10.0" prefWidth="475.1999984741211" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="50.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="475.0" />
                                        </columnConstraints>
                                        <rowConstraints>
                                           <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -88,22 +87,25 @@
                         </AnchorPane>
                      </content>
                   </TitledPane>
-                  <TitledPane prefWidth="600.0" text="Report">
+                  <TitledPane id="tp2" text="Report">
                      <content>
-                        <AnchorPane prefWidth="600.0">
+                        <VBox>
                            <children>
-                              <ScrollPane layoutX="19.600000381469727" layoutY="19.600000381469727" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-                                 <content>
-                                    <TableView fx:id="resultTable" minWidth="600.0" />
-                                 </content>
-                              </ScrollPane>
-                              <ButtonBar prefHeight="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0">
+                              <AnchorPane id="anchor_inside">
+                                 <children>
+                                    <TableView fx:id="resultTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children>
+                              </AnchorPane>
+                              <ButtonBar prefHeight="40.0">
                                 <buttons>
                                   <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Exportieren" />
                                 </buttons>
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
                               </ButtonBar>
                            </children>
-                        </AnchorPane>
+                        </VBox>
                      </content>
                   </TitledPane>
                </children>
