MySQLLogRecordReadDAO handles queries from report panel, extended query builder to work with date columns, routed dao calls over AppDataController.java

--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
@@ -26,7 +26,7 @@
                         </TextArea>
                         <VBox minWidth="120.0" spacing="10.0">
                            <children>
-                            <Button fx:id="sqlExecuteStatementButton" mnemonicParsing="false" onAction="#executeQuery" text="Ausführen" />
+                            <Button fx:id="sqlExecuteStatementButton" mnemonicParsing="false" text="Ausführen" />
                            </children>
                            <opaqueInsets>
                               <Insets />
