--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportDialog.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportDialog.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportDialogController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportDialogUIController">
     <children>
         <TabPane layoutX="14.0" layoutY="14.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
@@ -91,6 +91,6 @@
                 </Tab>
             </tabs>
         </TabPane>
-      <Button layoutX="38.0" layoutY="337.0" mnemonicParsing="false" text="Select Log FIles" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
+      <Button layoutX="38.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleImportSelectedFiles" text="Select Log FIles" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
     </children>
 </AnchorPane>
