--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="ImportPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportPanelUIController">
    <children>
-      <Button layoutX="34.0" layoutY="32.0" mnemonicParsing="false" text="Import New Log Data" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0" />
+      <Button layoutX="34.0" layoutY="32.0" mnemonicParsing="false" onAction="#openImportDialog" text="Import New Log Data" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0" />
    </children>
 </AnchorPane>
