--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -36,7 +36,12 @@
                   <Insets left="20.0" />
                </padding>
             </ToggleButton>
-            <ToggleButton fx:id="btnSettings" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="363.0" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Einstellungen">
+            <ToggleButton fx:id="btnSettings" alignment="BASELINE_LEFT" layoutX="10.0" layoutY="363.0" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Settings">
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </ToggleButton>
+            <ToggleButton fx:id="btnBaseData" alignment="BASELINE_LEFT" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Base Data">
                <padding>
                   <Insets left="20.0" />
                </padding>
