--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import org.controlsfx.control.CheckComboBox?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="ImportPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportPanelUIController">
    <children>
-      <Button layoutX="48.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleImportSelectedFiles" text="Select Log FIles" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
       <GridPane layoutX="24.0" layoutY="24.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="71.20002441406251" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.7999755859375" minWidth="10.0" prefWidth="208.7999755859375" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.199951171875" minWidth="10.0" prefWidth="31.59998779296876" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.60003662109375" minWidth="10.0" prefWidth="68.80000000000001" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.5999755859375" minWidth="10.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="0.0" prefWidth="105.20001220703125" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="485.6" minWidth="10.0" prefWidth="474.3999877929688" />
          </columnConstraints>
          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -28,9 +27,11 @@
             <Label text="User" />
             <Label text="Site" GridPane.rowIndex="1" />
             <Label text="Busline" GridPane.rowIndex="2" />
-            <CheckComboBox fx:id="chooseCreatedUser" prefWidth="180.0" GridPane.columnIndex="1" />
-            <CheckComboBox fx:id="chooseSite" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <CheckComboBox fx:id="chooseBusline" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ComboBox fx:id="chooseCreatedUser" prefWidth="200.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="chooseSite" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="chooseBusline" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="selectLogFiles" mnemonicParsing="false" onAction="#handleSelectedLogFiles" prefWidth="100.0" text="Select Log FIles" GridPane.rowIndex="4" />
+            <Button fx:id="importData" mnemonicParsing="false" onAction="#handleImportData" prefWidth="100.0" text="Import Data" GridPane.rowIndex="5" />
          </children>
       </GridPane>
       <Label layoutX="14.0" layoutY="14.0" text="Define Meta Data:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
