--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
    <children>
-      <VBox id="main_menu_pane" prefHeight="761.0" prefWidth="196.0">
+      <VBox id="main_menu_pane" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox id="logo" prefHeight="100.0" prefWidth="200.0" />
+            <AnchorPane id="logo" prefHeight="100.0" prefWidth="200.0" />
             <ToggleButton fx:id="btnHome" alignment="BASELINE_LEFT" mnemonicParsing="false" onMouseClicked="#handleMenuButtonClicks" styleClass="main_menu_button" text="Start">
                <VBox.margin>
                   <Insets />
@@ -48,10 +47,10 @@
             </ToggleButton>
          </children>
       </VBox>
-      <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" prefHeight="858.0" prefWidth="1002.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <items>
-            <TextArea id="messageBox" fx:id="messageBox" promptText="Meldungen" wrapText="true" />
-            <AnchorPane id="content_pane" fx:id="contentPane" minHeight="200.0" minWidth="200.0" prefHeight="600.0" prefWidth="800.0" />
+            <TextArea id="messageBox" fx:id="messageBox" promptText="Messages" wrapText="true" />
+            <AnchorPane id="content_pane" fx:id="contentPane" minHeight="200.0" minWidth="200.0" />
          </items>
       </SplitPane>
    </children>
