--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/SettingsPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/SettingsPanel.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane id="SettingsPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SettingsPanelUIController">
+<AnchorPane id="SettingsPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SettingsPanelUIController">
    <children>
       <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
