--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
@@ -7,5 +7,5 @@
             id="SettingsPanel"
             prefHeight="400.0"
             prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns="http://javafx.com/javafx"
             fx:controller="ch.zhaw.jv19.loganalyzer.view.BaseDataPanelUIController" />
