--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
+<AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
    <children>
       <VBox id="main_menu_pane" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
