--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.controlsfx.control.CheckComboBox?>
 
-<AnchorPane id="ReportPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController">
+<AnchorPane id="ReportPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportPanelUIController">
    <children>
          <VBox id="vbox" prefHeight="543.2" prefWidth="624.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -117,7 +117,7 @@
                                  <Label text="Created until" GridPane.columnIndex="4" />
                                  <Label text="Logged until" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                                  <CheckComboBox fx:id="createdUser" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                                 <CheckComboBox fx:id="recordType" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                                 <CheckComboBox fx:id="type" minWidth="-Infinity" prefWidth="180.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
                                  <Label text="Record type" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                                  <Label text="Site" GridPane.rowIndex="3" />
                                  <Label text="Messge substring" GridPane.columnIndex="4" GridPane.rowIndex="4" />
@@ -146,17 +146,22 @@
                               <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                        <TableView fx:id="resultTable" tableMenuButtonVisible="true" HBox.hgrow="ALWAYS" />
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                    <VBox fx:id="furtherAnalysisPanel" prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <Label text="Further Analysis" />
-                                          <TextField>
+                                          <TextField fx:id="secondsBefore" promptText="Sec before">
                                              <VBox.margin>
-                                                <Insets bottom="10.0" top="10.0" />
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </VBox.margin>
+                                          </TextField>
+                                          <TextField fx:id="secondsAfter" promptText="Sec after">
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" />
                                              </VBox.margin>
                                           </TextField>
                                           <Button mnemonicParsing="false" text="Search">
                                              <VBox.margin>
-                                                <Insets />
+                                                <Insets left="10.0" right="10.0" />
                                              </VBox.margin>
                                           </Button>
                                        </children>
