--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/SQLPanel.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="SQLPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SQLPanelUIController">
+<AnchorPane id="SQLPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SQLPanelUIController">
    <children>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="380.0" prefWidth="613.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
