--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportPanel.fxml
@@ -2,10 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
@@ -141,46 +139,8 @@
                   <content>
                      <VBox>
                         <children>
-                           <AnchorPane id="anchor_inside">
-                              <children>
-                              <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                       <TableView fx:id="resultTable" tableMenuButtonVisible="true" HBox.hgrow="ALWAYS" />
-                                    <VBox fx:id="furtherAnalysisPanel" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label text="Further Analysis" />
-                                          <TextField fx:id="secondsBefore" promptText="Sec before">
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                          <TextField fx:id="secondsAfter" promptText="Sec after">
-                                             <VBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" />
-                                             </VBox.margin>
-                                          </TextField>
-                                          <Button mnemonicParsing="false" text="Search">
-                                             <VBox.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                             </VBox.margin>
-                                          </Button>
-                                       </children>
-                                       <HBox.margin>
-                                          <Insets left="5.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              </children>
-                           </AnchorPane>
-                           <ButtonBar prefHeight="40.0">
-                             <buttons>
-                               <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Exportieren" />
-                             </buttons>
-                              <VBox.margin>
-                                 <Insets top="10.0" />
-                              </VBox.margin>
-                           </ButtonBar>
+                            <!-- fx:id must correspond (controller name without "Controller") with name of controller, see https://riptutorial.com/javafx/example/7285/nested-controllers-->
+                           <fx:include fx:id="resultPanelUI" source="ResultPanel.fxml"/>
                         </children>
                      </VBox>
                   </content>
